fixed color on ios safari?

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -57,7 +57,6 @@ li { margin: 0.4em 0; }
   max-width: 720px;
   margin: 0 auto;
   padding: 4em 2em;
-  background: var(--bg-secondary-opaque)
   
 }
 
@@ -137,6 +136,9 @@ html, body {
     background-attachment: fixed;
     background-size: cover
    }
+  .w {
+    background: var(--bg-secondary-opaque)
+  }
 }
 
 @media (max-width: 768px) {
